# timequota

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  PyPI.md  README.md  demo.ipynb  flake8.cfg  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: index.html  timequota.html
docs/config/: head.mako  logo.mako
tests/: test_timequota.py
timequota/: __init__.py  timequota.py
