[tool.poetry]
name = "timequota"
version = "0.0.3"
description = "Manage the time of your script"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
colorama = "^0.4.4"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.8b0"
ipykernel = "^6.3.1"
numpy = "^1.21.2"
pytest-cov = "^2.12.1"
py-make = "^0.1.1"
mypy = "^0.910"
types-tabulate = "^0.8.2"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
